refactored some HTML, starting tests

--- a/final/main.html
+++ b/final/main.html
@@ -33,14 +33,15 @@
       </div>
       <div class="media-content">
         <p class="title is-4">Manager <i class="fas fa-briefcase"></i></p>
-        <p class="subtitle is-6"></p>
+       
       </div>
     </div>
   
     <div class="content">
-      <p>Employee ID: </p>
-      <a target="_blank" href="mailto:"></a>
-      <p>Office Number: </p>
+    <p class="subtitle is-6">Toni</p>
+      <p>Employee ID: 27</p>
+      <a target="_blank" href="mailto:tonipow3ll@gmail.com">tonipow3ll@gmail.com</a>
+      <p>Office Number: 191</p>
     </div>
   </div>
   </div>
@@ -59,33 +60,14 @@
         </div>
         <div class="media-content">
           <p class="title is-4">Engineer <i class="fas fa-glasses"></i></p>
-          <p class="subtitle is-6"></p>
         </div>
       </div>
 
       <div class="content">
-        <p>Employee ID: </p>
-        <a target="_blank" href="mailto:"></a>
-        <p><a target="_blank" href="https://github.com/">Github</a></p>
-      </div>
-    </div>
-  </div>
-  <div class="card is-one-third has-text-centered ">
-
-    <div class="card-content">
-      <div class="media">
-        <div class="media-left">
-        </div>
-        <div class="media-content">
-          <p class="title is-4">Engineer <i class="fas fa-glasses"></i></p>
-          <p class="subtitle is-6"></p>
-        </div>
-      </div>
-
-      <div class="content">
-        <p>Employee ID: </p>
-        <a target="_blank" href="mailto:"></a>
-        <p><a target="_blank" href="https://github.com/">Github</a></p>
+        <p class="subtitle is-6">Jack Bauer</p>
+        <p>Employee ID: 7</p>
+        <a target="_blank" href="mailto:jacks@gmail.com">jacks@gmail.com</a>
+        <p><a target="_blank" href="https://github.com/tonipow3ll">Github</a></p>
       </div>
     </div>
   </div>
@@ -102,14 +84,14 @@
       </div>
       <div class="media-content">
         <p class="title is-4">Intern <i class="fas fa-user-graduate"></i></p>
-        <p class="subtitle is-6"></p>
       </div>
     </div>
 
     <div class="content">
-    <p>Intern ID: </p>
-      <a target="_blank" href="mailto:"></a>
-      <p>School: </p>
+    <p class="subtitle is-6">Bonnie</p>
+    <p>Intern ID: 7</p>
+      <a target="_blank" href="mailto:bonns@gmail.com">bonns@gmail.com</a>
+      <p>School: UNH</p>
       <br>
 
     </div>
