--- a/final/main.html
+++ b/final/main.html
@@ -38,10 +38,10 @@
     </div>
   
     <div class="content">
-    <p class="subtitle is-6">Toni</p>
-      <p>Employee ID: 27</p>
-      <a target="_blank" href="mailto:tonipow3ll@gmail.com">tonipow3ll@gmail.com</a>
-      <p>Office Number: 191</p>
+    <p class="subtitle is-6">TP</p>
+      <p>Employee ID: 123</p>
+      <a target="_blank" href="mailto:"><i class="far fa-envelope fa-lg"></i></a>
+      <p>Office Number: 123</p>
     </div>
   </div>
   </div>
@@ -64,10 +64,10 @@
       </div>
 
       <div class="content">
-        <p class="subtitle is-6">Jack Bauer</p>
-        <p>Employee ID: 7</p>
-        <a target="_blank" href="mailto:jacks@gmail.com">jacks@gmail.com</a>
-        <p><a target="_blank" href="https://github.com/tonipow3ll">Github</a></p>
+        <p class="subtitle is-6">TP</p>
+        <p>Employee ID: 231</p>
+        <a target="_blank" href="mailto:"><i class="far fa-envelope fa-lg"></i></a>
+        <p><a target="_blank" href="https://github.com/">Github</a></p>
       </div>
     </div>
   </div>
@@ -88,10 +88,10 @@
     </div>
 
     <div class="content">
-    <p class="subtitle is-6">Bonnie</p>
-    <p>Intern ID: 7</p>
-      <a target="_blank" href="mailto:bonns@gmail.com">bonns@gmail.com</a>
-      <p>School: UNH</p>
+    <p class="subtitle is-6">123</p>
+    <p>Intern ID: 123</p>
+      <a target="_blank" href="mailto:"><i class="far fa-envelope fa-lg"></i></a>
+      <p>School: </p>
       <br>
 
     </div>
